# SPOC

./: .gitignore  .gitignore.orig~  .ocamlformat  .ocamlformat-ignore  .travis-ci.sh  .travis.yml  ARCHITECTURE.md  CHANGES.md  CONTRIBUTING.md  COVERAGE.md  Dockerfile  METAL_STATUS.md  Makefile  PHASE4_PLAN.md  PRIORITY_14_SUMMARY.md  PROJECT_STATUS.md  README.md  ROADMAP.md  SPLIT_READY.md  TESTING_PLAN.md  TODO.md  _config.yml  a.out  benchmark_output.txt  bisect117763967.coverage  bisect740229684.coverage  bisect887774380.coverage  dune  dune-project  index.html  index.md  kirc_kernel0.cl  log  redirects.json  sarek-cuda.opam  sarek-metal.opam  sarek-opencl.opam  sarek-vulkan.opam  sarek.opam  sarek_ppx.opam  (+3 more)
Spoc/: .depend  .merlin  Cuda.ml  Cuda.mli  Cuda_framework.ml  Custom.c  Devices.ml  Devices.mli  Framework_plugins.ml  Framework_sig.ml  Kernel.ml  Kernel.mli  KernelCuda.ml  KernelOpenCL.ml  Kernel_cuda.c  Kernel_opencl.c  META  Makefile  Makefile.orig  Mem.ml  Mem.mli  Mem_c.c  Mem_c.h  OpenCL.ml  OpenCL.mli  Opencl_dynlink.c  Opencl_dynlink.h  Sarek_metadata.ml  Sarek_metadata.mli  Spoc.h  Spoc_c.c  Spoc_cu.c  Tools.ml  Tools.ml.BACKUP.3636.ml  Tools.ml.BASE.5169.ml  Tools.ml.LOCAL.3636.ml  Tools.ml.REMOTE.5169.ml  Tools.mli  Trac.ml  Trac.mli  (+12 more)
Spoc/CL/: cl_d3d10_ext.h  cl_gl_ext.h
Spoc/Js/: Kernel.js  Makefile  Mem.js  SPOC.js
Spoc/extension/: META  Makefile  Makefile.orig  dune  kernels_ext.cma  kernels_ext.ml
SpocLibs/Sarek/: .depend  BSP.md  Execute.ml  Gen.cmi  Gen.cmo  Gen.cmx  Gen.ml  Gen.mli  Kirc.cmi  Kirc.cmo  Kirc.cmx  Kirc.ml  Kirc.mli  Kirc_Ast.cmi  Kirc_Ast.cmo  Kirc_Ast.cmx  Kirc_Ast.ml  Kirc_Ast.mli  Kirc_Cuda.cmi  Kirc_Cuda.cmo  Kirc_Cuda.cmx  Kirc_Cuda.ml  Kirc_OpenCL.cmi  Kirc_OpenCL.cmo  Kirc_OpenCL.cmx  Kirc_OpenCL.ml  Kirc_OpenCL.mli  Kirc_types.mli  Kirc_v2.ml  META  Makefile  Makefile.orig  Profile.ml  README.md  Sarek_cpu_runtime.ml  Sarek_cpu_runtime.mli  Sarek_float32.ml  Sarek_float32.mli  Sarek_fusion.ml  Sarek_interp.ml  (+19 more)
benchmarks/: CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  INFRASTRUCTURE.md  JEKYLL_SETUP.md  OUTPUT_FORMATS.md  README.md  TODO.md  aggregate.ml  backend_cuda.unavailable.ml  backend_metal.available.ml  backend_opencl.available.ml  backend_opencl.unavailable.ml  backend_vulkan.available.ml  backend_vulkan.unavailable.ml  bench_bitonic_sort.ml  bench_conv2d.ml  bench_dot_product.ml  bench_gather_scatter.ml  bench_histogram.ml  bench_mandelbrot.ml  bench_matrix_mul.ml  bench_matrix_mul_tiled.ml  bench_nbody.ml  bench_radix_sort.ml  bench_reduction.ml  bench_reduction_max.ml  bench_scan.ml  bench_stencil_2d.ml  bench_stream_triad.ml  bench_transpose.ml  bench_transpose_tiled.ml  bench_vector_add.ml  bench_vector_copy.ml  benchmark_runner.ml  common.ml  dashboard.html  deduplicate_results.ml  dune  generate_backend_code.ml  index.html  (+6 more)
benchmarks/data/: latest.json
benchmarks/descriptions/: BACKEND_CODE_GENERATION.md  GENERATED_CODE.md  bitonic_sort.md  gather.md  histogram.md  mandelbrot.md  matrix_mul.md  matrix_mul_tiled.md  radix_sort.md  reduction.md  scan.md  scatter.md  stream_triad.md  transpose.md  vector_add.md  vector_copy.md
benchmarks/results/: README.md  aggregated_results.csv  aggregated_results.json  cachyos_bitonic_sort_1024_2026-01-12T09-56-55.json  cachyos_bitonic_sort_16384_2026-01-12T09-56-56.json  cachyos_bitonic_sort_4096_2026-01-12T09-56-56.json  cachyos_conv2d_1024_2026-01-12T09-56-52.json  cachyos_conv2d_2048_2026-01-12T09-56-52.json  cachyos_conv2d_256_2026-01-12T09-56-51.json  cachyos_conv2d_512_2026-01-12T09-56-51.json  cachyos_dot_product_100000000_2026-01-12T09-55-09.json  cachyos_dot_product_10000000_2026-01-12T09-54-51.json  cachyos_dot_product_1000000_2026-01-12T09-54-50.json  cachyos_dot_product_50000000_2026-01-12T09-54-57.json  cachyos_gather_10000000_2026-01-12T09-57-26.json  cachyos_gather_1000000_2026-01-12T09-57-19.json  cachyos_gather_50000000_2026-01-12T09-58-05.json  cachyos_histogram_10000000_2026-01-12T09-57-01.json  cachyos_histogram_1000000_2026-01-12T09-56-57.json  cachyos_histogram_50000000_2026-01-12T09-57-17.json  cachyos_mandelbrot_1048576_2026-01-10T22-54-57.json  cachyos_mandelbrot_1048576_2026-01-11T11-02-28.json  cachyos_mandelbrot_1048576_2026-01-11T16-10-42.json  cachyos_mandelbrot_16777216_2026-01-10T22-55-44.json  cachyos_mandelbrot_16777216_2026-01-11T11-03-15.json  cachyos_mandelbrot_16777216_2026-01-11T16-11-29.json  cachyos_mandelbrot_262144_2026-01-10T22-54-54.json  cachyos_mandelbrot_262144_2026-01-11T11-02-26.json  cachyos_mandelbrot_262144_2026-01-11T16-10-40.json  cachyos_mandelbrot_4194304_2026-01-10T22-55-06.json  cachyos_mandelbrot_4194304_2026-01-11T11-02-38.json  cachyos_mandelbrot_4194304_2026-01-11T16-10-52.json  cachyos_matrix_mul_naive_1024_2026-01-10T20-11-35.json  cachyos_matrix_mul_naive_1024_2026-01-10T22-51-26.json  cachyos_matrix_mul_naive_1024_2026-01-11T10-59-02.json  cachyos_matrix_mul_naive_1024_2026-01-11T16-02-55.json  cachyos_matrix_mul_naive_2048_2026-01-10T20-11-35.json  cachyos_matrix_mul_naive_2048_2026-01-10T22-51-26.json  cachyos_matrix_mul_naive_2048_2026-01-11T10-59-02.json  cachyos_matrix_mul_naive_2048_2026-01-11T16-07-10.json  (+357 more)
plugins/cuda/: Cuda_api.ml  Cuda_bindings.ml  Cuda_nvrtc.ml  Cuda_plugin.ml  Cuda_plugin_base.ml  dune  (+3 more)
ppx/: debug.ml  dune  external_kernel.ml  gen_types.ml  sarek_grammar.ml  sarek_types.ml
sarek-cuda/: CHANGELOG.md  Cuda_api.ml  Cuda_bindings.ml  Cuda_error.ml  Cuda_nvrtc.ml  Cuda_plugin.ml  Cuda_plugin_base.ml  Cuda_types.ml  README.md  Sarek_ir_cuda.ml  dune
sarek-metal/: Metal_api.ml  Metal_bindings.ml  Metal_error.ml  Metal_plugin.ml  Metal_plugin_base.ml  Metal_types.ml  README.md  Sarek_ir_metal.ml  dune
sarek-opencl/: Opencl_api.ml  Opencl_bindings.ml  Opencl_error.ml  Opencl_plugin.ml  Opencl_plugin_base.ml  Opencl_types.ml  README.md  Sarek_ir_opencl.ml  dune
tools/: backend_cuda.available.ml  backend_init.ml  backend_metal.available.ml  backend_metal.unavailable.ml  backend_opencl.available.ml  backend_vulkan.available.ml  backend_vulkan.unavailable.ml  device_info.ml  dune
(+2108 files in other folders)
