(dirs dependencies)

(library
 (name spoc)
 (public_name spoc)
 (foreign_stubs
  (language c)
  (names cuda_drvapi_dynlink Kernel_cuda Mem_c Spoc_c Trac_c Custom Kernel_opencl Opencl_dynlink  Spoc_cu))
 (c_library_flags (-lnvrtc))
 (libraries str)
 (preprocess (action (run %{bin:cppo} -V OCAML:%{ocaml_version} %{input-file}))))
