; Benchmark suite for Sarek
; Produces standalone JSON files for multi-machine aggregation

(library
 (name benchmark_common)
 (modules common system_info output benchmark_runner)
 (libraries spoc_core benchmark_backends yojson unix))

; Backend loader with conditional GPU backend support

(library
 (name benchmark_backends)
 (modules
  backend_loader
  backend_cuda
  backend_opencl
  backend_vulkan
  backend_metal)
 (libraries
  spoc_core
  sarek_native
  sarek_interpreter
  ; Conditionally include GPU backends if available
  (select
   backend_cuda.ml
   from
   (sarek_cuda -> backend_cuda.available.ml)
   (-> backend_cuda.unavailable.ml))
  (select
   backend_opencl.ml
   from
   (sarek_opencl -> backend_opencl.available.ml)
   (-> backend_opencl.unavailable.ml))
  (select
   backend_vulkan.ml
   from
   (sarek_vulkan -> backend_vulkan.available.ml)
   (-> backend_vulkan.unavailable.ml))
  (select
   backend_metal.ml
   from
   (sarek_metal -> backend_metal.available.ml)
   (-> backend_metal.unavailable.ml))
  unix))

(executable
 (name bench_matrix_mul)
 (modules bench_matrix_mul)
 (libraries benchmark_common benchmark_backends sarek sarek_stdlib spoc_core)
 (preprocess
  (pps sarek_ppx)))

(executable
 (name bench_vector_add)
 (modules bench_vector_add)
 (libraries benchmark_common benchmark_backends sarek sarek_stdlib spoc_core)
 (preprocess
  (pps sarek_ppx)))

(executable
 (name bench_reduction)
 (modules bench_reduction)
 (libraries benchmark_common benchmark_backends sarek sarek_stdlib spoc_core)
 (preprocess
  (pps sarek_ppx)))

(executable
 (name bench_transpose)
 (modules bench_transpose)
 (libraries benchmark_common benchmark_backends sarek sarek_stdlib spoc_core)
 (preprocess
  (pps sarek_ppx)))

(executable
 (name bench_transpose_tiled)
 (modules bench_transpose_tiled)
 (libraries benchmark_common benchmark_backends sarek sarek_stdlib spoc_core)
 (preprocess
  (pps sarek_ppx)))

(executable
 (name bench_mandelbrot)
 (modules bench_mandelbrot)
 (libraries benchmark_common benchmark_backends sarek sarek_stdlib spoc_core)
 (preprocess
  (pps sarek_ppx)))

(executable
 (name bench_matrix_mul_tiled)
 (modules bench_matrix_mul_tiled)
 (libraries benchmark_common benchmark_backends sarek sarek_stdlib spoc_core)
 (preprocess
  (pps sarek_ppx)))

(executable
 (name bench_vector_copy)
 (modules bench_vector_copy)
 (libraries benchmark_common benchmark_backends sarek sarek_stdlib spoc_core)
 (preprocess
  (pps sarek_ppx)))

(executable
 (name bench_stream_triad)
 (modules bench_stream_triad)
 (libraries benchmark_common benchmark_backends sarek sarek_stdlib spoc_core)
 (preprocess
  (pps sarek_ppx)))

(executable
 (name bench_nbody)
 (modules bench_nbody)
 (libraries benchmark_common benchmark_backends sarek sarek_stdlib spoc_core)
 (flags
  (:standard -w -33))
 (preprocess
  (pps sarek_ppx)))

(executable
 (name bench_stencil_2d)
 (modules bench_stencil_2d)
 (libraries benchmark_common benchmark_backends sarek sarek_stdlib spoc_core)
 (flags
  (:standard -w -33))
 (preprocess
  (pps sarek_ppx)))

(executable
 (name bench_conv2d)
 (modules bench_conv2d)
 (libraries benchmark_common benchmark_backends sarek sarek_stdlib spoc_core)
 (flags
  (:standard -w -33))
 (preprocess
  (pps sarek_ppx)))
; Data aggregation and analysis tools

(executable
 (name aggregate)
 (modules aggregate)
 (libraries benchmark_common yojson unix))

(executable
 (name to_csv)
 (modules to_csv)
 (libraries yojson unix))

(executable
 (name to_web)
 (modules to_web)
 (libraries yojson unix))

(executable
 (name generate_backend_code)
 (modules generate_backend_code)
 (libraries
  sarek
  sarek_stdlib
  sarek_cuda
  sarek_opencl
  sarek_vulkan
  sarek_metal
  unix)
 (preprocess
  (pps sarek_ppx)))

; Deduplication tool for managing submitted benchmark results

(executable
 (name deduplicate_results)
 (modules deduplicate_results)
 (libraries yojson))

; Main benchmark runner (to be implemented)
; (executable
;  (name bench_runner)
;  (modules bench_runner)
;  (libraries benchmark_common benchmark_backends sarek sarek_stdlib spoc_core)
;  (preprocess (pps sarek_ppx)))

(executable
 (name bench_reduction_max)
 (modules bench_reduction_max)
 (libraries benchmark_common benchmark_backends sarek sarek_stdlib spoc_core)
 (preprocess
  (pps sarek_ppx)))

(executable
 (name bench_dot_product)
 (modules bench_dot_product)
 (libraries benchmark_common benchmark_backends sarek sarek_stdlib spoc_core)
 (preprocess
  (pps sarek_ppx)))

; Sprint 2 (P1) Benchmarks

(executable
 (name bench_scan)
 (modules bench_scan)
 (libraries benchmark_common benchmark_backends sarek sarek_stdlib spoc_core)
 (preprocess
  (pps sarek_ppx)))

(executable
 (name bench_bitonic_sort)
 (modules bench_bitonic_sort)
 (libraries benchmark_common benchmark_backends sarek sarek_stdlib spoc_core)
 (preprocess
  (pps sarek_ppx)))

(executable
 (name bench_histogram)
 (modules bench_histogram)
 (libraries benchmark_common benchmark_backends sarek sarek_stdlib spoc_core)
 (preprocess
  (pps sarek_ppx)))

(executable
 (name bench_gather_scatter)
 (modules bench_gather_scatter)
 (libraries benchmark_common benchmark_backends sarek sarek_stdlib spoc_core)
 (preprocess
  (pps sarek_ppx)))

(executable
 (name bench_radix_sort)
 (modules bench_radix_sort)
 (libraries benchmark_common benchmark_backends sarek sarek_stdlib spoc_core)
 (preprocess
  (pps sarek_ppx)))
