(library
  (name spoc_ppx)
  (public_name spoc_ppx)
  (kind ppx_rewriter)
  (libraries ppxlib spoc)
  (preprocess (pps ppxlib.metaquot))
  (modules external_kernel)
)


(library
  (name sarek_ppx)
  (public_name sarek_ppx)
  (kind ppx_rewriter)
  (libraries ppxlib spoc)
  (preprocess (pps ppxlib.metaquot))
  (modules (:standard \ external_kernel))
)
