; Metal Plugin - Pure OCaml with ctypes
; No C stubs required
; Linking this library automatically registers the Metal backend
;
; Dependencies: Only framework SDK + IR types, NOT full sarek library

(library
 (name sarek_metal)
 (public_name sarek-metal.plugin)
 (optional)
 (libraries
  ctypes
  ctypes.foreign
  spoc_framework
  spoc_framework_registry
  sarek_ir
  sarek_registry
  (re_export spoc_core))
 (modules
  Metal_types
  Metal_bindings
  Metal_api
  Metal_plugin_base
  Metal_plugin
  Sarek_ir_metal)
 (preprocess no_preprocessing))
