; ir_extract/ contains tools for extracting reference IR

(dirs ir_extract)

(library
 (name sarek)
 (public_name sarek)
 (libraries spoc ctypes sarek_framework sarek_core)
 (modules
  Kirc_Ast
  Sarek_ir
  Sarek_ir_cuda
  Sarek_ir_opencl
  Sarek_fusion
  Sarek_interp
  Sarek_cpu_runtime
  Sarek_float32
  Gen
  Kirc
  Kirc_v2
  Kirc_Cuda
  Kirc_OpenCL
  Profile
  Skeletons
  Transform
  Sarek_registry
  Execute))
