; ir_extract/ contains tools for extracting reference IR

(dirs ir_extract)

; Main sarek library - V2 path, no SPOC dependency

(library
 (name sarek)
 (public_name sarek)
 (libraries ctypes sarek_framework sarek_ir sarek_core)
 (modules
  Kirc_Ast
  Kirc_types
  Sarek_ir
  Sarek_ir_cuda
  Sarek_ir_opencl
  Sarek_ir_interp
  Sarek_fusion
  Sarek_cpu_runtime
  Sarek_float32
  Kirc_v2
  Sarek_registry
  Execute
  Transform))
