; CUDA Plugin - Pure OCaml with ctypes
; No C stubs required
; Linking this library automatically registers the CUDA backend

(library
 (name sarek_cuda)
 (optional)
 (libraries
  ctypes
  ctypes.foreign
  spoc_framework
  spoc_framework_registry
  sarek
  (re_export spoc_core))
(modules
 Cuda_types
 Cuda_bindings
 Cuda_nvrtc
 Cuda_api
 Cuda_plugin_base
 Cuda_plugin
 Sarek_ir_cuda)
 (preprocess no_preprocessing))
