; OpenCL Plugin - Pure OCaml with ctypes
; No C stubs required
; Linking this library automatically registers the OpenCL backend

(library
 (name sarek_opencl)
 (optional)
 (libraries
  ctypes
  ctypes.foreign
  str
  sarek_framework
  sarek
  (re_export sarek_core))
 (modules
  Opencl_types
  Opencl_bindings
  Opencl_api
  Opencl_plugin
  Opencl_plugin_v2)
 (preprocess no_preprocessing))
