; Vulkan Plugin - Pure OCaml with ctypes
; No C stubs required - all FFI via ctypes-foreign
; Linking this library automatically registers the Vulkan backend
;
; Requirements:
; - libvulkan.so.1 at runtime
; - glslangValidator for GLSL to SPIR-V compilation

(library
 (name sarek_vulkan)
 (optional)
 (libraries
  ctypes
  ctypes.foreign
  spoc_framework
  spoc_framework_registry
  sarek
  (re_export spoc_core))
 (modules
  Vulkan_types
  Vulkan_bindings
  Vulkan_api
  Vulkan_plugin_base
  Vulkan_plugin
  Sarek_ir_glsl)
 (preprocess no_preprocessing))
