; Vulkan Plugin - Pure OCaml with ctypes
; No C stubs required - all FFI via ctypes-foreign
; Linking this library automatically registers the Vulkan backend
;
; Requirements:
; - libvulkan.so.1 at runtime
; - glslangValidator for GLSL to SPIR-V compilation
;
; Dependencies: Only framework SDK + IR types, NOT full sarek library

(library
 (name sarek_vulkan)
 (public_name sarek-vulkan.plugin)
 (optional)
 (libraries
  ctypes
  ctypes.foreign
  spoc_framework
  spoc_framework_registry
  sarek_ir
  sarek_registry
  (re_export spoc_core))
 (modules
  Vulkan_types
  Vulkan_bindings
  Vulkan_api
  Vulkan_plugin_base
  Vulkan_plugin
  Sarek_ir_glsl
  Shaderc)
 (preprocess no_preprocessing))
