; SPOC Runtime Core
; Unified abstractions for devices, memory, and kernel execution

(library
 (name spoc_core)
 (public_name spoc.core)
 (libraries spoc_framework ctypes unix)
 (modules
  Log
  Device
  Memory
  Kernel
  Kernel_arg
  Runtime
  Vector
  Transfer
  Profiling
  Error
  Advanced)
 (preprocess no_preprocessing))
