; SPOC Runtime Core
; Unified abstractions for devices, memory, and kernel execution

(library
 (name spoc_core)
 (public_name sarek.core)
 (libraries
  spoc_framework
  spoc_framework_registry
  ctypes
  unix
  sarek_registry)
 (modules
  Log
  Device
  Memory
  Kernel
  Kernel_arg
  Runtime
  Vector_types
  Vector_transfer
  Vector_storage
  Vector
  Transfer
  Profiling
  Error
  Advanced)
 (preprocess no_preprocessing))
