; ir_extract/ contains tools for extracting reference IR

(dirs ir_extract)

; Main sarek library - V2 path, no SPOC dependency

(library
 (name sarek)
 (public_name sarek)
 (libraries
  ctypes
  spoc_framework
  spoc_framework_registry
  sarek_ir
  spoc_core
  (re_export sarek_registry))
 (modules
  Kirc_Ast
  Kirc_types
  Sarek_ir
  Sarek_ir_interp
  Sarek_fusion
  Sarek_cpu_runtime
  Sarek_float32
  Kirc_kernel
  Execute
  Execute_error
  Transform))
