(executable
 (name CustomPi)
 (flags (-ccopt -L$CUDA_PATH -cclib -lnvrtc))
(preprocess
  (action
    (system "camlp4 -I `ocamlfind query spoc.external_kernels` -I. -parser o -printer o external_kernels.cma %{input-file}")))
  (foreign_stubs
    (language c)
    (names ExtCustom)
  )
 (preprocessor_deps (package spoc))
 (libraries unix spoc camlp4)
)
