(library
 (name internal_kernels)
 (public_name sarek.internal_kernels)
 (enabled_if (< %{ocaml_version} 5.0))
(preprocess
  (action
    (system "camlp4of  %{input-file}")))
    (flags (:standard -w -27))
 (libraries camlp4 dynlink)
 (modules (:standard \ test))
 (modes byte)
)

(executable
  (name test)
  (enabled_if (< %{ocaml_version} 5.0))
   (flags (:standard -ccopt -L$CUDA_PATH -cclib -lnvrtc -w -26 -w -27 -w -33))
(preprocess
  (action
    (system "camlp4 -I `ocamlfind query sarek.internal_kernels` -I. -parser o -parser op -printer o internal_kernels.cma %{input-file}")))

 (preprocessor_deps (package spoc) (package sarek))
 (libraries spoc sarek camlp4 sarek.internal_kernels unix)
 (modules test)
)
