(executable
 (name test_reference_ir)
 (libraries str)
 (modules test_reference_ir))

(rule
 (alias runtest)
 (deps ../regression/reference_ir.txt)
 (action
  (chdir
   %{project_root}
   (run %{exe:test_reference_ir.exe}))))

(library
 (name test_ktype)
 (libraries sarek_ppx_lib spoc sarek sarek.stdlib)
 (preprocess
  (pps sarek_ppx))
 (flags
  (:standard -w -33))
 (modules test_ktype))

; IR comparison tests - compares PPX-generated IR to reference

(executable
 (name test_comparison)
 (libraries str alcotest spoc sarek sarek.stdlib)
 (preprocess
  (pps sarek_ppx))
 (flags
  (:standard -w -33 -ccopt -L/opt/cuda/lib64 -cclib -lnvrtc))
 (modules test_comparison))

(rule
 (alias runtest)
 (deps ../regression/reference_ir.txt)
 (action
  (chdir
   %{project_root}
   (run %{exe:test_comparison.exe}))))
