(library
 (name test_helpers)
 (modules test_helpers)
 (libraries sarek_core unix))

(executables
 (names
  test_vector_add
  test_module_const
  test_ktype_record
  test_klet_fun
  test_klet_variant
  test_ktype_helper
  test_nbody_ppx
  test_ray_ppx
  test_registered_type
  test_registered_variant
  ; test_cross_module_type (disabled - registered modules broken)
  ; test_registered_const (disabled - registered modules broken)
  test_visibility_private
  test_convention
  test_convention_kernel
  test_pragma
  test_barrier_converged
  test_superstep
  test_fusion_api
  test_stencil
  test_matrix_mul
  test_reduce
  test_complex_types
  test_math_intrinsics
  test_bitwise_ops
  test_scan
  test_transpose
  test_sort
  test_convolution
  test_mandelbrot
  test_polymorphism
  test_module_poly
  test_bounded_recursion
  test_inline_pragma
  test_nested_types)
 (modules
  test_vector_add
  test_module_const
  test_ktype_record
  test_klet_fun
  test_klet_variant
  test_ktype_helper
  test_nbody_ppx
  test_ray_ppx
  registered_defs
  test_registered_type
  test_registered_variant
  ; test_cross_module_type
  ; test_registered_const
  test_visibility_private
  test_convention
  test_convention_kernel
  test_pragma
  test_barrier_converged
  test_superstep
  test_fusion_api
  test_stencil
  test_matrix_mul
  test_reduce
  test_complex_types
  test_math_intrinsics
  test_bitwise_ops
  test_scan
  test_transpose
  test_sort
  test_convolution
  test_mandelbrot
  test_polymorphism
  test_module_poly
  test_bounded_recursion
  test_inline_pragma
  test_nested_types)
 (libraries
  sarek
  sarek.stdlib
  sarek.float64
  sarek_geometry
  sarek.visibility
  sarek_ppx.lib
  sarek_core
  sarek_cuda
  sarek_opencl
  sarek_native
  sarek_interpreter
  test_helpers
  unix)
 (preprocess
  (pps sarek_ppx))
 (flags
  (:standard -w -33 -ccopt -L/opt/cuda/lib64 -cclib -lnvrtc)))

(alias
 (name runtest)
 (deps
  test_vector_add.exe
  test_module_const.exe
  test_ktype_record.exe
  test_klet_fun.exe
  test_klet_variant.exe
  test_ktype_helper.exe
  test_nbody_ppx.exe
  test_ray_ppx.exe
  test_registered_type.exe
  test_registered_variant.exe
  ; test_cross_module_type.exe
  ; test_registered_const.exe
  test_visibility_private.exe
  test_convention.exe
  test_convention_kernel.exe
  test_pragma.exe
  test_barrier_converged.exe
  test_superstep.exe
  test_fusion_api.exe
  test_stencil.exe
  test_matrix_mul.exe
  test_reduce.exe
  test_complex_types.exe
  test_math_intrinsics.exe
  test_bitwise_ops.exe
  test_scan.exe
  test_transpose.exe
  test_sort.exe
  test_convolution.exe
  test_mandelbrot.exe
  test_polymorphism.exe))

(executable
 (name test_debug_native)
 (modules test_debug_native)
 (libraries sarek sarek_native sarek_stdlib sarek_core unix)
 (preprocess
  (pps sarek_ppx)))

; External kernel test - no PPX needed (tests raw source execution)
; Note: This test works with any available backend. CUDA/OpenCL-specific linker
; flags are handled by those optional libraries. If no GPU backend is available,
; the test will still run using Native/Interpreter for rejection tests.

(executable
 (name test_external_kernel)
 (modules test_external_kernel)
 (optional)
 (libraries
  sarek
  sarek_core
  sarek_cuda
  sarek_opencl
  sarek_native
  sarek_interpreter
  test_helpers
  unix))
